--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: 'Roboto Mono', monospace;
-}
-
 @layer base {
+  * {
+    @apply font-mono;
+  }
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
