--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,6 @@
+/* postcss-custom-properties: true */
+/* stylelint-disable at-rule-no-unknown */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
